--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -831,7 +831,7 @@ items:
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetState(Integer)
   type: Method
   summary: "\nBatchTaskState of the task.\n"
-  remarks: "\n<p>See enum BatchTaskState.</p>\n"
+  remarks: "\n<p>See <xref href=\"CRMScript.NetServer.BatchTaskState\" data-throw-if-not-resolved=\"false\"></xref></p>\n"
   syntax: 
     content: SetState(Integer state)
     parameters:
@@ -877,3 +877,9 @@ references:
   name: StringDictionary
   nameWithType: StringDictionary
   fullName: CRMScript.Global.StringDictionary
+- uid: CRMScript.NetServer.BatchTaskState
+  commentId: T:CRMScript.NetServer.BatchTaskState
+  isExternal: true
+  name: BatchTaskState
+  nameWithType: BatchTaskState
+  fullName: CRMScript.NetServer.BatchTaskState
