--- a/docs/api-reference/CRMScript.NetServer.BatchTaskState.yml
+++ b/docs/api-reference/CRMScript.NetServer.BatchTaskState.yml
@@ -1,6 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.BatchTaskState
+  # Same as SuperOffice.Data.BatchTaskState
   commentId: T:CRMScript.NetServer.BatchTaskState
   id: BatchTaskState
   langs:
@@ -28,7 +29,7 @@ items:
   nameWithType: BatchTaskState.Unknown
   fullName: CRMScript.NetServer.BatchTaskState.Unknown
   type: Field
-  summary: "\n0: Unknown\n"
+  summary: "\n0: Unknown state of the task.\n"
   syntax: 
     content: Unknown = 0
     type: CRMScript.NetServer.BatchTaskState
@@ -41,7 +42,7 @@ items:
   nameWithType: BatchTaskState.New
   fullName: CRMScript.NetServer.BatchTaskState.New
   type: Field
-  summary: "\n1: New\n"
+  summary: "\n1: The task is new, but not assigned or run by any party.\n"
   syntax: 
     content: New = 1
     type: CRMScript.NetServer.BatchTaskState
@@ -54,7 +55,7 @@ items:
   nameWithType: BatchTaskState.Aquired
   fullName: CRMScript.NetServer.BatchTaskState.Aquired
   type: Field
-  summary: "\n2: Aquired\n"
+  summary: "\n2: The task has been acquired by an instance that wants to execute the task, but has not been started.\n"
   syntax: 
     content: Aquired = 2
     type: CRMScript.NetServer.BatchTaskState
@@ -67,7 +68,7 @@ items:
   nameWithType: BatchTaskState.Started
   fullName: CRMScript.NetServer.BatchTaskState.Started
   type: Field
-  summary: "\n3: Started\n"
+  summary: "\n3: The task is executing.\n"
   syntax: 
     content: Started = 3
     type: CRMScript.NetServer.BatchTaskState
@@ -80,7 +81,7 @@ items:
   nameWithType: BatchTaskState.Succeeded
   fullName: CRMScript.NetServer.BatchTaskState.Succeeded
   type: Field
-  summary: "\n4: Succeeded\n"
+  summary: "\n4: Executing the task has completed successfully.\n"
   syntax: 
     content: Succeeded = 4
     type: CRMScript.NetServer.BatchTaskState
@@ -93,7 +94,7 @@ items:
   nameWithType: BatchTaskState.Failed
   fullName: CRMScript.NetServer.BatchTaskState.Failed
   type: Field
-  summary: "\n5: Failed\n"
+  summary: "\n5: Executing the task has halted and the task failed.\n"
   syntax: 
     content: Failed = 5
     type: CRMScript.NetServer.BatchTaskState
@@ -119,7 +120,7 @@ items:
   nameWithType: BatchTaskState.All
   fullName: CRMScript.NetServer.BatchTaskState.All
   type: Field
-  summary: "\n99999: All\n"
+  summary: "\n99999: Special type.\n"
   syntax: 
     content: All = 99999
     type: CRMScript.NetServer.BatchTaskState
